# sqd-network

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  dummy_client.json  p2p_healthcheck.sh  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yml  docker.yml
arch/become-archive/: become-archive.pu
arch/pallet-fisherman/: pallet-fisherman.pu
arch/pallet-ingester/: pallet-ingester.pu
arch/pallet-nnbreq/: pallet-nnbreq.pu
arch/pallet-whead/: pallet-whead.pu
arch/pallet-worker/: pallet-worker.pu
contract-client/: Cargo.toml
contract-client/abi/: NetworkController.json  WorkerRegistration.json
contract-client/examples/: get_active_workers.rs  get_allocations.rs  get_current_epoch.rs  get_gateways.rs  is_worker_registered.rs
contract-client/src/: cli.rs  client.rs  contracts.rs  error.rs  lib.rs  transport.rs
crates/assignments/: Cargo.toml  build.rs
crates/assignments/schema/: assignment.fbs
crates/assignments/src/: assignment_fb.rs  builder.rs  common.rs  lib.rs  reader.rs  signatures.rs
crates/assignments/tests/: .gitattributes  assignment.fb  common.rs  network_state.rs  test_building.rs  test_reading.rs
crates/bootnode/: Cargo.toml
crates/bootnode/src/: main.rs
crates/contract-client/: Cargo.toml
crates/contract-client/abi/: AllocationsViewer.json  GatewayRegistry.json  NetworkController.json  PortalRegistry.json
crates/contract-client/examples/: get_active_portals.rs  get_active_workers.rs  get_allocations.rs  get_current_epoch.rs  get_gateways.rs  get_portal_sqd_locked.rs  worker_registration_time.rs
crates/contract-client/src/: cli.rs  client.rs  contracts.rs  error.rs  lib.rs  merge.rs  transport.rs
crates/k8s-subsquid-controller/: Cargo.toml
crates/k8s-subsquid-controller/src/: main.rs
crates/keygen/: Cargo.toml
crates/keygen/src/: main.rs
crates/messages/: Cargo.toml  build.rs
crates/messages/proto/: messages.proto
crates/messages/src/: assignments.rs  bitstring.rs  data_chunk.rs  lib.rs  range.rs  signatures.rs  versions.rs
crates/messages/src/tests/: assignment.json
crates/observer/: Cargo.toml
crates/observer/src/: cli.rs  http_server.rs  main.rs  metrics.rs  transport.rs
crates/pallet-acala-network/: Cargo.toml
crates/pallet-acala-network/src/: lib.rs  traits.rs  weights.rs
crates/pallet-archive/: Cargo.toml
crates/pallet-archive/src/: lib.rs  tests.rs  weights.rs
crates/pallet-data-source/: Cargo.toml
crates/pallet-data-source/src/: lib.rs  weights.rs
crates/pallet-requests/: Cargo.toml
crates/pallet-requests/src/: lib.rs  traits.rs  weights.rs
crates/pallet-substrate-native-requests/: Cargo.toml
crates/pallet-substrate-native-requests/src/: lib.rs
crates/pallet-vesting/: Cargo.toml
crates/pallet-vesting/src/: lib.rs  mock.rs  tests.rs  weights.rs
crates/pallet-worker/: Cargo.toml
crates/pallet-worker/src/: lib.rs  tests.rs  traits.rs  weights.rs
crates/pallet-workers-scheduler/: Cargo.toml
crates/pallet-workers-scheduler/src/: lib.rs  traits.rs
crates/primitives-archive/: Cargo.toml
crates/primitives-archive/src/: lib.rs
crates/primitives-networks/: Cargo.toml
crates/primitives-networks/src/: lib.rs
crates/primitives-worker/: Cargo.toml
crates/primitives-worker/src/: lib.rs
crates/resource-client/: Cargo.toml
crates/resource-client/src/: main.rs
crates/subsquid-node/: Cargo.toml
crates/subsquid-node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  service.rs
crates/subsquid-rpc/: Cargo.toml
crates/subsquid-rpc/src/: lib.rs
crates/subsquid-runtime/: Cargo.toml  build.rs
crates/subsquid-runtime/src/: common.rs  data_sources.rs  lib.rs  requests.rs  scheduler.rs  task_preparation.rs  workers.rs
crates/transport/: Cargo.toml
crates/transport/examples/: README.md  autonat.rs  debug.rs  identify.rs  kad.rs  ping.rs
crates/transport/src/: actors.rs  behaviour.rs  builder.rs  cli.rs  codec.rs  lib.rs  metrics.rs  protocol.rs  util.rs  vec_codec.rs
crates/transport/src/actors/: gateway.rs  logs_collector.rs  observer.rs  peer_checker.rs  pings_collector.rs  portal.rs  portal_logs_collector.rs  scheduler.rs  sql_client.rs  worker.rs
crates/transport/src/behaviour/: addr_cache.rs  base.rs  keep_alive.rs  node_whitelist.rs  noise.rs  pubsub.rs  request_client.rs  request_server.rs  stream_client.rs  wrapped.rs
crates/transport/src/util/: queue.rs  stream_with_payload.rs
grpc-libp2p/: Cargo.toml  Dockerfile  README.md  build.rs  rustfmt.toml
grpc-libp2p/proto/: p2p_transport.proto  worker_rpc.proto
grpc-libp2p/src/: bootnode.rs  client.rs  grpc-client.rs  lib.rs  message.rs  node.rs  rpc.rs  server.rs  transport.rs  util.rs  worker.rs
grpc-libp2p/src/worker/: worker.cpp  worker.hpp
messages/: Cargo.toml
messages/proto/: messages.proto
messages/src/: lib.rs  range.rs  signatures.rs  versions.rs
roadmap/: roadmap.md
specifications/: chain-spec.md  graph.md  kyve.md  pokt.md  subquery.md
transport/: Cargo.toml  Dockerfile  build.rs
transport/proto/: p2p_transport.proto
transport/src/: actors.rs  behaviour.rs  bootnode.rs  builder.rs  cli.rs  codec.rs  grpc-client.rs  lib.rs  message.rs  metrics.rs  node.rs  protocol.rs  rpc.rs  task_manager.rs  transport.rs  util.rs  worker.rs
transport/src/actors/: gateway.rs  logs_collector.rs  observer.rs  pings_collector.rs  scheduler.rs  worker.rs
transport/src/behaviour/: addr_cache.rs  base.rs  pubsub.rs  request_client.rs  request_server.rs  wrapped.rs
transport/src/codec/: legacy.rs  proto.rs
transport/src/util/: queue.rs  task_manager.rs
transport/src/worker/: worker.cpp
