[workspace]
members = ["contract-client", "messages", "transport"]
resolver = "2"

[workspace.dependencies]
libp2p = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "d03dec17" }
libp2p-connection-limits = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "d03dec17" }
libp2p-swarm-derive = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "d03dec17" }
