[package]
name = "grpc-libp2p"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
futures = "0.3"
libp2p = { version = "0.50", features = ["dns", "tcp", "tokio", "websocket", "noise", "mplex", "yamux"] }
log = "0.4"
prost = "0.11"
simple_logger = "4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
tonic = "0.8"
tower = { version = "0.4", features = ["make"] }

[build-dependencies]
tonic-build = "0.8"


