[package]
name = "grpc-libp2p"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "worker"
path = "src/worker.rs"

[dependencies]
anyhow = "1"
bimap = "0.6"
clap = { version = "4", features = ["derive"] }
cxx = "1"
futures = "0.3"
libp2p = { version = "0.50", features = ["dns", "tcp", "tokio", "websocket", "noise", "mplex", "yamux", "identify", "kad"] }
libp2p-swarm-derive = "0.31"
log = "0.4"
prost = "0.11"
simple_logger = "4"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat", "codec"] }
tonic = "0.8"
tower = { version = "0.4", features = ["make"] }

[build-dependencies]
tonic-build = "0.8"
cmake = "0.1"
cxx-build = "1"
