[package]
name = "grpc-libp2p"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "bootnode"
path = "src/bootnode.rs"

[[bin]]
name = "grpc-client"
path = "src/grpc-client.rs"
required-features = ["rpc"]

[features]
rpc = ["prost", "tonic", "tonic-build", "tower"]
worker = ["cmake", "cxx", "cxx-build"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
bimap = "0.6"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
libp2p = { version = "0.50", features = ["dns", "tcp", "tokio", "websocket", "noise", "mplex", "yamux", "identify", "kad", "autonat", "relay", "dcutr", "ping", "request-response"] }
libp2p-swarm-derive = "0.31"
log = "0.4"
simple_logger = "4"
snow = "^0.9.1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version  = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }

# Worker
cxx = {version = "1", optional = true }

# RPC
prost = { version = "0.11", optional = true }
tonic = { version = "0.9", optional = true }
tower = { version = "0.4", features = ["make"], optional = true }

[build-dependencies]
# Worker
cmake = { version = "0.1", optional = true}
cxx-build = { version =  "1", optional = true}

# RPC
tonic-build = {version = "0.9", optional = true}
