[package]
name = "subsquid-messages"
license = "AGPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

[features]
signatures = ["libp2p"]

[dependencies]
anyhow = "1"
hex = { version = "0.4", features = ["serde"] }
prost = "0.12"
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"

libp2p = { workspace = true, optional = true }

[build-dependencies]
prost-build = "0.12"
