[package]
name = "subsquid-network-transport"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/node.rs"

[[bin]]
name = "bootnode"
path = "src/bootnode.rs"

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bimap = "0.6"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10"
futures = "0.3"
futures-core = "0.3"
libp2p = { version = "0.53", features = ["dns", "tcp", "tokio", "noise", "yamux", "identify", "kad", "relay", "dcutr", "ping", "request-response", "gossipsub", "serde", "autonat"] }
libp2p-connection-limits = "0.3"
libp2p-swarm-derive = "0.34"
log = "0.4"
rand = "0.8"
snow = "^0.9.1"
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { version  = "0.1", features = ["sync"] }

# RPC
prost = "0.12"
tonic = { version = "0.10", features = ["gzip"] }
tower = { version = "0.4", features = ["make"] }

[build-dependencies]
# RPC
tonic-build = "0.10"
