[package]
name = "subsquid-network-transport"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "bootnode"
path = "src/bin/bootnode.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bimap = "0.6"
clap = { version = "4", features = ["derive", "env"] }
derivative = "2"
env_logger = "0.11"
futures = "0.3"
futures-bounded = { git = "https://github.com/Wiezzel/rust-futures-bounded.git", rev = "579106d" }
futures-core = "0.3"
lazy_static = { version = "1" }
libp2p = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "299b66e4", features = ["dns", "tokio", "noise", "yamux", "identify", "kad", "relay", "dcutr", "ping", "request-response", "gossipsub", "serde", "autonat", "quic"] }
libp2p-connection-limits = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "299b66e4" }
libp2p-swarm-derive = { git = "https://github.com/Wiezzel/rust-libp2p.git", rev = "299b66e4" }
log = "0.4"
prometheus-client = { version = "0.22.2", optional = true }
prost = { version = "0.12", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "rt-multi-thread", "signal", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"

subsquid-messages = { path = "../messages", features = ["signatures"] }

[features]
metrics = ["libp2p/metrics", "prometheus-client"]
