[package]
name = "sqd-assignments"
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[features]
reader = ["serde_json", "ouroboros"]
builder = ["base64", "curve25519-dalek", "hmac", "serde_json", "url"]

[dependencies]
anyhow = { version = "1.0" }
base64 = { version = "0.22.1", optional = true }
crypto_box = { version = "0.9.1", features = ["std"] }
curve25519-dalek = { version = "4.1.3", optional = true }
hmac = { version = "0.12.1", optional = true }
flatbuffers = "25.2.10"
libp2p-identity = { workspace = true, features = ["rand", "ed25519"] }
ouroboros = { version = "0.18.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.10.8" }
tracing = "0.1.41"
url = { version = "2.5.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
