[package]
name = "sqd-contract-client"
license = "AGPL-3.0-or-later"
version = "1.2.1"
edition = "2021"

[dependencies]

async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
ethers = { version = "2", features = ["ws"] }
futures = "0.3"
libp2p = { workspace = true }
log = "0.4"
num-rational = "0.4"
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "macros"] }
tokio-stream = "0.1"
url = "2"

[dev-dependencies]
anyhow = "1"
chrono = "0.4"
futures = "0.3"
simple_logger = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
