[package]
name = "k8s-subsquid-controller"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.74.0", default-features = true, features = ["derive", "runtime"] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_22"] } # Kube-rs depends on k8s-openapi
