[package]
name = "sqd-keygen"
license = "AGPL-3.0-or-later"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

sqd-network-transport = { path = "../transport" }

[lints]
workspace = true
