[package]
name = "sqd-messages"
license = "AGPL-3.0-or-later"
version = "2.0.2"
edition = "2021"

[features]
assignment_reader = ["anyhow", "crypto_box", "flate2", "libp2p-identity/serde", "reqwest", "serde_json", "serde_with", "sha2", "tokio"]
assignment_writer = ["anyhow", "base64", "bs58", "crypto_box", "curve25519-dalek", "hmac", "libp2p-identity/serde", "log", "serde_json", "serde_with", "sha2", "url"]
bitstring = ["bytemuck", "flate2"]
signatures = ["libp2p"]

[dependencies]
anyhow = { version = "1.0", optional = true }
base64 = { version = "0.22.1", optional = true }
bs58 = { version = "0.5.1", optional = true }
bytemuck = { version = "1.19.0", optional = true, features = ["extern_crate_alloc"] }
crypto_box = { version = "0.9.1", optional = true }
curve25519-dalek = { version = "4.1.3", optional = true }
flate2 = { version = "1.0.30", optional = true }
hex = { version = "0.4", features = ["serde"] }
hmac = { version = "0.12.1", optional = true }
log = { version = "0.4", optional = true }
prost = "0.13"
reqwest = { version = "0.12.4", optional = true, features = ["json"] }
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.111", optional = true, features = ["preserve_order"] }
serde_with = { version = "3.11.0", optional = true, features = ["base64"] }
sha2 = { version = "0.10.8", optional = true }
sha3 = "0.10"
tokio = { version = "1.38", optional = true }
url = { version = "2.5.0", optional = true }

libp2p = { workspace = true, optional = true }
libp2p-identity = { workspace = true, optional = true }

[dev-dependencies]
sqd-network-transport = { path = "../transport" }

[build-dependencies]
prost-build = "0.12"

[lints]
workspace = true
