[package]
name = "sqd-messages"
license = "AGPL-3.0-or-later"
version = "2.1.0"
edition = "2021"

[features]
bitstring = ["bytemuck", "flate2"]
signatures = []

[dependencies]
bytemuck = { version = "1.19.0", optional = true, features = ["extern_crate_alloc"] }
flate2 = { version = "1.0.30", optional = true }
hex = { version = "0.4", features = ["serde"] }
prost = "0.13"
semver = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
sha3 = "0.10"

libp2p-identity = { workspace = true }

[build-dependencies]
prost-build = "0.12"

[lints]
workspace = true
