[package]
name = "sqd-observer"
license = "AGPL-3.0-or-later"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7.4", features = ["http2"] }
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
futures = "0.3"
lazy_static = { version = "1" }
libp2p = { workspace = true, features = ["dns", "tokio", "identify", "kad", "ping", "quic", "metrics"] }
libp2p-swarm-derive = { workspace = true }
log = "0.4"
prometheus-client = { version = "0.22.2" }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

sqd-messages = { path = "../messages", features = ["bitstring"] }
sqd-contract-client = { path = "../contract-client" }
sqd-network-transport = { path = "../transport", features = [] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6" }

[lints]
workspace = true
