[package]
name = "pallet-worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate primitive dependencies
sp-arithmetic = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

# Substrate frame dependencies
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-arithmetic/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
