[package]
name = "pallet-workers-scheduler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pallet-data-source = { version = "0.1", path = "../pallet-data-source" }
pallet-worker = { version = "0.1", path = "../pallet-worker" }
primitives-worker = { version = "0.1", path = "../primitives-worker" }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate primitive dependencies
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

# Substrate frame dependencies
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"scale-info/std",
  "frame-system/std",
  "pallet-data-source/std",
  "pallet-worker/std",
  "primitives-worker/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "pallet-data-source/runtime-benchmarks",
  "pallet-worker/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "pallet-data-source/try-runtime",
  "pallet-worker/try-runtime",
]
