[package]
name = "primitives-worker"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate primitive dependencies
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
  "sp-application-crypto/std",
]
