[package]
name = "subsquid-node"
version = "0.1.0"
edition = "2021"
publish = false

default-run = "subsquid-node"

[dependencies]
subsquid-rpc = { version = "0.1", path = "../subsquid-rpc"}
subsquid-runtime = { version = "0.1", path = "../subsquid-runtime"}

clap = { version = "3.1", features = ["derive"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master"}
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master"}
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true}

[features]
default = ["wasmtime"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "subsquid-runtime/runtime-benchmarks",
  "wasmtime",
]
try-runtime = [
  "subsquid-runtime/try-runtime",
  "try-runtime-cli",
]
wasmtime = [
  "sc-cli/wasmtime",
  "sc-executor/wasmtime",
  "sc-service/wasmtime",
]
