[package]
name = "subsquid-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
subsquid-runtime = { version = "0.1", path = "../subsquid-runtime" }

jsonrpsee = { version = "0.14.0", features = ["server"] }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "master"}
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "master"}
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master"}
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master"}
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "master"}
