[package]
name = "subsquid-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
static_assertions = "1.1.0"

# Substrate primitive dependencies
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

# Substrate frame dependencies
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

# RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master"}

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = [ "std" ]
std = [
  "frame-executive/std",
  "frame-support/std",
  "frame-system-rpc-runtime-api/std",
  "frame-system/std",
  "pallet-aura/std",
  "pallet-balances/std",
  "pallet-grandpa/std",
  "pallet-randomness-collective-flip/std",
  "pallet-sudo/std",
  "pallet-timestamp/std",
  "pallet-transaction-payment-rpc-runtime-api/std",
  "pallet-transaction-payment/std",
  "sp-api/std",
  "sp-block-builder/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-inherents/std",
  "sp-offchain/std",
  "sp-runtime/std",
  "sp-session/std",
  "sp-std/std",
  "sp-transaction-pool/std",
  "sp-version/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-grandpa/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

try-runtime = [
  "frame-executive/try-runtime",
  "frame-system/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-grandpa/try-runtime",
  "pallet-randomness-collective-flip/try-runtime",
  "pallet-sudo/try-runtime",
  "pallet-timestamp/try-runtime",
  "pallet-transaction-payment/try-runtime",
]
